- finished mvp with correct parsing
