# schema/schema.go
@@ -1,29 +1,55 @@
 package schema
 
+import "time"
+
 type AnyMap map[string]interface{}
 
-type SearchGame struct {
+type ManticoreResponseHitSource struct {
 	ID                     int64   `json:"id"`
 	Name                   string  `json:"name"`
 	Slug                   string  `json:"slug"`
 	Summary                string  `json:"summary,omitempty"`
 	Storyline              string  `json:"storyline,omitempty"`
 	Checksum               string  `json:"checksum,omitempty"`
-	AggregatedRating       float64 `json:"aggregatedRating,omitempty"`
-	AggregatedRatingCount  int64   `json:"aggregatedRatingCount,omitempty"`
+	AggregatedRating       float64 `json:"aggregated_rating,omitempty"`
+	AggregatedRatingCount  int64   `json:"aggregated_rating_count,omitempty"`
 	Category               uint8   `json:"category"`
 	Status                 uint8   `json:"status"`
-	FirstReleaseDate       uint64  `json:"firstReleaseDate,omitempty"`
-	CreatedAt              uint64  `json:"createdAt"`
-	UpdatedAt              uint64  `json:"updatedAt"`
-	CoverUrl               string  `json:"coverUrl,omitempty"`
-	NumViews               uint64  `json:"numViews,omitempty"`
-	NumLikes               uint64  `json:"numLikes,omitempty"`
-	GenresNames            string  `json:"genresNames,omitempty"`
-	PlatformsNames         string  `json:"platformsNames,omitempty"`
-	PlatformsAbbreviations string  `json:"platformsAbbreviations,omitempty"`
-	KeywordsNames          string  `json:"keywordsNames,omitempty"`
+	FirstReleaseDate       uint64  `json:"first_release_date,omitempty"`
+	CreatedAt              uint64  `json:"created_at"`
+	UpdatedAt              uint64  `json:"updated_at"`
+	CoverUrl               string  `json:"cover_url,omitempty"`
+	NumViews               uint64  `json:"num_views,omitempty"`
+	NumLikes               uint64  `json:"num_likes,omitempty"`
+	GenresNames            string  `json:"genres_names,omitempty"`
+	PlatformsNames         string  `json:"platforms_names,omitempty"`
+	PlatformsAbbreviations string  `json:"platforms_abbreviations,omitempty"`
+	KeywordsNames          string  `json:"keywords_names,omitempty"`
 	Source                 string  `json:"source"`
+}
+
+type SearchGame struct {
+	ID                     int64     `json:"id"`
+	Name                   string    `json:"name"`
+	Slug                   string    `json:"slug"`
+	Summary                string    `json:"summary,omitempty"`
+	Storyline              string    `json:"storyline,omitempty"`
+	Checksum               string    `json:"checksum,omitempty"`
+	AggregatedRating       float64   `json:"aggregatedRating,omitempty"`
+	AggregatedRatingCount  int64     `json:"aggregatedRatingCount,omitempty"`
+	Category               uint8     `json:"category"`
+	Status                 uint8     `json:"status"`
+	FirstReleaseDate       time.Time `json:"firstReleaseDate,omitempty"`
+	CreatedAt              time.Time `json:"createdAt"`
+	UpdatedAt              time.Time `json:"updatedAt"`
+	CoverUrl               string    `json:"coverUrl,omitempty"`
+	NumViews               uint64    `json:"numViews,omitempty"`
+	NumLikes               uint64    `json:"numLikes,omitempty"`
+	GenresNames            string    `json:"genresNames,omitempty"`
+	PlatformsNames         string    `json:"platformsNames,omitempty"`
+	PlatformsAbbreviations string    `json:"platformsAbbreviations,omitempty"`
+	KeywordsNames          string    `json:"keywordsNames,omitempty"`
+	Source                 string    `json:"source"`
 }
 
 type ManticoreResponseHit struct {
@@ -31,7 +57,7 @@ type ManticoreResponseHit struct {
 	Score int    `json:"_score"`
 	// To avoid re-mapping here, we only map the final SearchGame which is used in GameSearchResponseHit
 	// This is basically SearchGame as returned by ManticoreSearch, in snake_case.
-	Source interface{} `json:"_source"`
+	Source ManticoreResponseHitSource `json:"_source"`
 }
 
 type ManticoreSearchHits struct {
@@ -61,7 +87,7 @@ type ManticoreErrorResponse struct {
 }
 
 type GameSearchResponseHit struct {
-	ID     string     `json:"id"`
+	ID     uint       `json:"id"`
 	Score  int        `json:"score"`
 	Source SearchGame `json:"source"`
 }
